Refactored logicexpr component

--- a/src/engine/benchmark/logicExpression/CMakeLists.txt
+++ b/src/engine/benchmark/logicExpression/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_executable(logicExpression_benchmarks
-  logicExpressionEvaluator_bench.cpp
-)
+# TODO update
+# add_executable(logicExpression_benchmarks
+#   logicExpressionEvaluator_bench.cpp
+# )
 
-target_link_libraries(logicExpression_benchmarks benchmark::benchmark_main logicExpression)
+# target_link_libraries(logicExpression_benchmarks benchmark::benchmark_main logicexpr)
